<resources>
    <string name="app_name">FreePass</string>

    <string name="free_pass">FreePass</string>
    <string name="back_arrow">back arrow</string>
    <string name="home">home</string>
    <string name="app_logo">app logo</string>

    <!-- MAIN MENU -->
    <string name="proceed">How would you like to proceed</string>
    <string name="more_secure_less_convenient">More Secure, Less Convenient</string>
    <string name="less_secure_more_convenient">Less Secure, More Convenient</string>

    <!-- ANONYMOUS MODE/ ACCOUNT MODE -->
    <string name="anonymous_mode">Anonymous Mode</string>
    <string name="account_mode">Account Mode</string>
    <string name="settings">Settings</string>
    <string name="info">info</string>
    <string name="website_url">Website URL</string>
    <string name="username">Username</string>
    <string name="master_password">Master Password</string>
    <string name="options">Options</string>
    <string name="az_lowercase">a-z</string>
    <string name="az_uppercase">A-Z</string>
    <string name="numbers">0–9</string>
    <string name="symbols">%!@</string>
    <string name="length">Length</string>
    <string name="sixteen">16</string>
    <string name="counter">Counter</string>
    <string name="one">1</string>
    <string name="add_workbench">Add Workbench</string>
    <string name="generate_password">Generate Password</string>
    <string name="generate_password_caps">GENERATE PASSWORD</string>
    <string name="copy_to_clipboard">copy to clipboard</string>
    <string name="copy">Copy</string>
    <string name="view"> View</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>

    <!-- FORGOT PASSWORD -->
    <string name="please_enter_email">Please enter your email, we will send you an attachment to reset your password</string>
    <string name="email">Email</string>
    <string name="send_email">Send email</string>

    <!-- INFO -->
    <string name="information">Information</string>
    <string name="website_url_info">The domain of the website your account is on. We recommend that you keep the formatting consistent across all your passwords.</string>
    <string name="username_info"> The username of the account you\'re using.</string>
    <string name="master_password_info">Consider this your freePass password, you can use it to generate all your passwords, however if you want to be as safe as possible you should use multiple passwords. Try using a different password for different website types (shopping, financial, etc).</string>
    <string name="checkbox_options">Checkbox Options</string>
    <string name="checkbox_info">You can choose to include/exclude certain characters from your password.</string>
    <string name="length_info">The number of characters your generated password will have.</string>
    <string name="counter_info">The counter exists to allow you to change your password. It starts at 1 by default, if you want to get a new password with the same login details you should increase the counter by one.</string>
    <string name="workbench">Workbench</string>
    <string name="workbench_info">You can take advantage of the workbench to beef up password security. To use it you should copy paste a long and easy to find text, like the first paragraph of a royalty free book.</string>
    <string name="save_info">Save the website URL; your username; checkbox options; password length and password counter. Keep in mind the master password and workbench are not saved.</string>

    <!-- LOGIN -->
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!-- REGISTER -->
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already registered? Log in</string>
    <string name="cancel">Cancel</string>

    <!-- SETTINGS -->
    <string name="default_username">Default Username</string>
    <string name="default_options">Default Options</string>
    <string name="advanced_options">Advanced Options</string>
    <string name="min_numbers">Min. Numbers</string>
    <string name="two">2</string>
    <string name="min_symbols">Min. Symbols</string>
    <string name="account">Account</string>
    <string name="logged_in_as">Logged in as: </string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="currently_not_logged_in">Currently not logged in</string>

    <!-- WORKBENCH -->
    <string name="enter_workbench_here">Enter workbench here</string>

</resources>