<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Info"
    android:background="#36393f">

    <TextView
        android:id="@+id/Information_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <ImageView
        android:id="@+id/BackArrow_imageView"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:contentDescription="@string/back_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintStart_toEndOf="@+id/Information_textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021"
        app:srcCompat="@drawable/back_arrow_icon" />

    <ImageView
        android:id="@+id/Home_imageView"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:contentDescription="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toEndOf="@+id/Information_textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/home_icon" />

    <TextView
        android:id="@+id/WebsiteURL_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website_url"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Information_textView"
        app:layout_constraintTop_toBottomOf="@+id/Information_textView"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/WebsiteURLInfo_textView"
        android:layout_width="360dp"
        android:layout_height="51dp"
        android:text="@string/website_url_info"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/WebsiteURL_textView"
        app:layout_constraintTop_toBottomOf="@+id/WebsiteURL_textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Username_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/WebsiteURLInfo_textView"
        app:layout_constraintTop_toBottomOf="@+id/WebsiteURLInfo_textView"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/UsernameInfo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_info"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Username_textView"
        app:layout_constraintTop_toBottomOf="@+id/Username_textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/MasterPassword_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/master_password"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/UsernameInfo_textView"
        app:layout_constraintTop_toBottomOf="@+id/UsernameInfo_textView"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/MasterPasswordInfo_textView"
        android:layout_width="364dp"
        android:layout_height="90dp"
        android:text="@string/master_password_info"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/MasterPassword_textView"
        app:layout_constraintTop_toBottomOf="@+id/MasterPassword_textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Checkbox_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_options"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/MasterPasswordInfo_textView"
        app:layout_constraintTop_toBottomOf="@+id/MasterPasswordInfo_textView"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/CheckboxInfo_textView"
        android:layout_width="363dp"
        android:layout_height="35dp"
        android:text="@string/checkbox_info"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Checkbox_textView"
        app:layout_constraintTop_toBottomOf="@+id/Checkbox_textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Length_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/CheckboxInfo_textView"
        app:layout_constraintTop_toBottomOf="@+id/CheckboxInfo_textView"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/LengthInfo_textView"
        android:layout_width="362dp"
        android:layout_height="34dp"
        android:text="@string/length_info"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Length_textView"
        app:layout_constraintTop_toBottomOf="@+id/Length_textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Counter_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/LengthInfo_textView"
        app:layout_constraintTop_toBottomOf="@+id/LengthInfo_textView"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/CounterInfo_textView"
        android:layout_width="364dp"
        android:layout_height="67dp"
        android:text="@string/counter_info"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Counter_textView"
        app:layout_constraintTop_toBottomOf="@+id/Counter_textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Workbench_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workbench"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/CounterInfo_textView"
        app:layout_constraintTop_toBottomOf="@+id/CounterInfo_textView"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/WorkbenchInfo_textView"
        android:layout_width="363dp"
        android:layout_height="67dp"
        android:text="@string/workbench_info"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Workbench_textView"
        app:layout_constraintTop_toBottomOf="@+id/Workbench_textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Save_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WorkbenchInfo_textView"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/SaveInfo_textView"
        android:layout_width="363dp"
        android:layout_height="52dp"
        android:text="@string/save_info"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Save_textView"
        app:layout_constraintTop_toBottomOf="@+id/Save_textView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>