<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:ignore="LabelFor"
    android:background="#36393f">

    <TextView
        android:id="@+id/AnonymousMode_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anonymous_mode"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <ImageView
        android:id="@+id/Settings_imageView"
        android:layout_width="31dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toEndOf="@+id/AnonymousMode_textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021"
        app:srcCompat="@drawable/settings_icon"
        android:contentDescription="@string/settings" />

    <ImageView
        android:id="@+id/Info_imageView"
        android:layout_width="31dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/AnonymousMode_textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/info_icon"
        android:contentDescription="@string/info" />

    <ImageView
        android:id="@+id/Home_imageView"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:contentDescription="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toEndOf="@+id/AnonymousMode_textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/home_icon" />

    <TextView
        android:id="@+id/WebsiteURL_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website_url"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AnonymousMode_textView"
        app:layout_constraintVertical_bias="0.031" />

    <EditText
        android:id="@+id/WebsiteURL_editText"
        android:layout_width="369dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="text"
        android:autofillHints="websiteURL"
        android:textColor="@color/white"
        app:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WebsiteURL_textView"
        app:layout_constraintVertical_bias="0.003" />

    <TextView
        android:id="@+id/Username_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WebsiteURL_editText"
        app:layout_constraintVertical_bias="0.029" />

    <EditText
        android:id="@+id/Username_editText"
        android:layout_width="370dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="text"
        android:autofillHints="username"
        android:textColor="@color/white"
        app:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username_textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/MasterPassword_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/master_password"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username_editText"
        app:layout_constraintVertical_bias="0.004" />

    <EditText
        android:id="@+id/MasterPassword_editText"
        android:layout_width="370dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textColor="@color/white"
        app:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MasterPassword_textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Options_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MasterPassword_editText"
        app:layout_constraintVertical_bias="0.048" />

    <CheckBox
        android:id="@+id/LowerCase_checkBox"
        android:layout_width="98dp"
        android:layout_height="52dp"
        android:checked="true"
        android:text="@string/az_lowercase"
        android:textColor="@color/white"
        app:buttonTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Options_textView"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/UpperCase_checkBox"
        android:layout_width="98dp"
        android:layout_height="52dp"
        android:checked="true"
        android:text="@string/az_uppercase"
        android:textColor="@color/white"
        app:buttonTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/LowerCase_checkBox"
        app:layout_constraintTop_toBottomOf="@+id/Options_textView"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/Number_checkBox"
        android:layout_width="98dp"
        android:layout_height="52dp"
        android:checked="true"
        android:text="@string/numbers"
        android:textColor="@color/white"
        app:buttonTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/UpperCase_checkBox"
        app:layout_constraintTop_toBottomOf="@+id/Options_textView"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/Symbol_checkBox"
        android:layout_width="98dp"
        android:layout_height="52dp"
        android:checked="true"
        android:text="@string/symbols"
        android:textColor="@color/white"
        app:buttonTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Number_checkBox"
        app:layout_constraintTop_toBottomOf="@+id/Options_textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Length_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LowerCase_checkBox"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/Length_editText"
        android:layout_width="75dp"
        android:layout_height="47dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:text="@string/sixteen"
        android:autofillHints="@string/length"
        android:textColor="@color/white"
        app:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Length_textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Counter_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Length_textView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/Counter_editText"
        android:layout_width="75dp"
        android:layout_height="47dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:text="@string/one"
        android:autofillHints="@string/counter"
        android:textColor="@color/white"
        app:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Counter_textView"
        app:layout_constraintTop_toBottomOf="@+id/Counter_textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Workbench_button"
        android:layout_width="178dp"
        android:layout_height="51dp"
        android:text="@string/add_workbench"
        android:textColor="@android:color/black"
        app:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/Counter_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toEndOf="@+id/Counter_editText"
        app:layout_constraintTop_toBottomOf="@+id/Number_checkBox"
        app:layout_constraintVertical_bias="0.733" />

    <Button
        android:id="@+id/GenPassword_button"
        android:layout_width="373dp"
        android:layout_height="50dp"
        android:text="@string/generate_password"
        android:textColor="@android:color/black"
        app:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Counter_editText"
        app:layout_constraintVertical_bias="0.25" />

    <ImageView
        android:id="@+id/CopyClipboard_imageView"
        android:layout_width="26dp"
        android:layout_height="30dp"
        android:visibility="gone"
        android:contentDescription="@string/copy_to_clipboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="@+id/GenPassword_button"
        app:layout_constraintTop_toBottomOf="@+id/GenPassword_button"
        app:layout_constraintVertical_bias="0.134"
        app:srcCompat="@drawable/copy_to_clipboard_icon" />

    <TextView
        android:id="@+id/CopyClipboard_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/CopyClipboard_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toEndOf="@+id/CopyClipboard_imageView"
        app:layout_constraintTop_toBottomOf="@+id/GenPassword_button"
        app:layout_constraintVertical_bias="0.892" />

    <ImageView
        android:id="@+id/Show_imageView"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:visibility="gone"
        android:contentDescription="@string/view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toEndOf="@+id/CopyClipboard_imageView"
        app:layout_constraintTop_toTopOf="@+id/CopyClipboard_imageView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/show_icon" />

    <TextView
        android:id="@+id/Show_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/Show_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/Show_imageView"
        app:layout_constraintTop_toBottomOf="@+id/GenPassword_button"
        app:layout_constraintVertical_bias="0.827" />

    <ImageView
        android:id="@+id/Reset_imageView"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:visibility="gone"
        android:contentDescription="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toEndOf="@+id/Show_imageView"
        app:layout_constraintTop_toTopOf="@+id/Show_imageView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/reset_icon" />

    <TextView
        android:id="@+id/Reset_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/Reset_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toEndOf="@+id/Reset_imageView"
        app:layout_constraintTop_toBottomOf="@+id/GenPassword_button"
        app:layout_constraintVertical_bias="0.793" />

</androidx.constraintlayout.widget.ConstraintLayout>
